--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ enable_language(CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS On)
 
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 if(POLICY CMP0077)
     cmake_policy(SET CMP0077 NEW)
 endif()
@@ -52,16 +53,16 @@ if(NOT expected_POPULATED)
 endif(NOT expected_POPULATED)
 
 # add crypt++ (+cmake) library
-set(CRYPTOPP_BUILD_TESTING Off)
-set(CRYPTOPP_INSTALL Off)
+#set(CRYPTOPP_BUILD_TESTING Off)
+#set(CRYPTOPP_INSTALL Off)
 
-if(NOT cryptopp_POPULATED)
-  FetchContent_Declare(cryptopp
-    GIT_REPOSITORY https://github.com/abdes/cryptopp-cmake.git
-    GIT_TAG CRYPTOPP_8_7_0)
-  FetchContent_Populate(cryptopp)
-  add_subdirectory(${cryptopp_SOURCE_DIR} ${cryptopp_BINARY_DIR})
-endif(NOT cryptopp_POPULATED)
+#if(NOT cryptopp_POPULATED)
+#  FetchContent_Declare(cryptopp
+#    GIT_REPOSITORY https://github.com/abdes/cryptopp-cmake.git
+#    GIT_TAG CRYPTOPP_8_7_0_1)
+#  FetchContent_Populate(cryptopp)
+#  add_subdirectory(${cryptopp_SOURCE_DIR} ${cryptopp_BINARY_DIR})
+#endif(NOT cryptopp_POPULATED)
 
 include(CTest)
 enable_testing()
@@ -94,7 +95,7 @@ set(LIB_SOURCES
   src/big_int.hpp src/big_int.cpp )
 
 add_library(oc-mint-lib ${LIB_SOURCES})
-target_link_libraries(oc-mint-lib PUBLIC Crow::Crow cryptopp::cryptopp)
+target_link_libraries(oc-mint-lib PUBLIC Crow::Crow) # cryptopp::cryptopp)
 target_include_directories(oc-mint-lib PUBLIC ${expected_SOURCE_DIR}/include src) 
 
 add_executable(${PROJECT_NAME} src/main.cpp)
