--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
+
+project(oc-issuer VERSION 0.0.2 LANGUAGES CXX)
 
 enable_language(C)
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS On)
 
 if(POLICY CMP0077)
     cmake_policy(SET CMP0077 NEW)
@@ -14,7 +17,6 @@ else()
     add_compile_options(-Wall -Wextra -pedantic)
 endif()
 
-project(oc-issuer VERSION 0.0.2 LANGUAGES CXX)
 
 include(FetchContent)
 
@@ -25,11 +27,12 @@ set(CROW_BUILD_EXAMPLES Off)
 set(CROW_BUILD_TOOLS Off)
 set(CROW_BUILD_TESTS Off)
 set(CROW_BUILD_DOCS Off)
+set(CROW_FEATURES "ssl;compression")
 
 # add crow project to the build
 FetchContent_Declare(crow
   		 GIT_REPOSITORY https://github.com/CrowCpp/Crow.git
-		 GIT_TAG v1.0+5
+		 GIT_TAG v1.2.0
 		 )
 
 if(NOT crow_POPULATED)
@@ -47,14 +50,14 @@ if(NOT expected_POPULATED)
 endif(NOT expected_POPULATED)
 
 include(CTest)
-enable_testing()
+	enable_testing()
 
 set(CATCH_INSTALL_DOCS Off)
 set(CATCH_INSTALL_EXTRAS Off)
 FetchContent_Declare(
   Catch2
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG        v3.3.1
+  GIT_TAG        v3.6.0
 )
 
 FetchContent_MakeAvailable(Catch2)
