--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -19,28 +19,29 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest,
+             macos-latest,
+             windows-latest]
 
     steps:
     - uses: actions/checkout@v3
     - name: Prepare dependencies
       run:   |
-         if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get update && \
-              sudo apt-get install -yq \
-                libboost-system-dev \
-                libboost-date-time-dev \
-                cmake \
-                graphviz doxygen
-         elif [ "$RUNNER_OS" == "Windows" ]; then
-              choco install boost-msvc-14.3 graphviz doxygen.install
-         elif [ "$RUNNER_OS" == "macOS" ]; then
-              brew install boost graphviz doxygen
-         else
-              echo "$RUNNER_OS not supported"
-              exit 1
-         fi
-      shell: bash      
+        if [ "$RUNNER_OS" == "Linux" ]; then
+             sudo apt-get update && \
+             sudo apt-get install -yq \
+               libasio-dev \
+               libssl-dev zlib1g-dev \
+               cmake graphviz doxygen
+        elif [ "$RUNNER_OS" == "Windows" ]; then
+             VCPKG_DEFAULT_TRIPLET=x64-windows vcpkg install
+        elif [ "$RUNNER_OS" == "macOS" ]; then
+             brew install asio openssl zlib doxygen graphviz
+        else
+             echo "$RUNNER_OS not supported"
+             exit 1
+        fi
+      shell: bash
     - name: Configure CMake
       run: cmake -B build
       shell: bash      
